fixed settings navitem not showing in the dashboard

--- a/src/user/profile/profile.scss
+++ b/src/user/profile/profile.scss
@@ -2,6 +2,7 @@
   display: flex;
   min-height: 100vh;
   height: auto;
+  padding-right: 20px;
   font-family: Muli, sans-serif;
   .navigation {
     flex: 0.5;
